--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </header>
     <main>
         <section class="Principal">
-            <img src="/Img/job-7291427_640.png">
+            <img src="./Img/job-7291427_640.png">
             <div class="TextP">
                 <h2>Front End Engineer</h2>
                 <p>¡Bienvenido a mi mundo digital! Me especializo en el diseño web, creando experiencias digitales unicas y atractivas.
@@ -39,7 +39,7 @@
         </div>
         <div class="Tecn">
             <h3>TECGNOLOGIES</h3>
-            <img src="/Img/tecnologys-removebg-preview.png">
+            <img src="./Img/tecnologys-removebg-preview.png">
         </div>
     </section>
 
