--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
         <div class="Tecn">
             <h3>TECGNOLOGIES</h3>
-            <img src="./Img/tecnologys.png">
+            <img src="./Img/tecnologys-removebg-preview.png">
         </div>
     </section>
 
